# pygameuno

./: .gitignore  123.py  README.md  SE.md  animation.md  color.py  file_structure.md  main.py  main.spec  pygameuno.spec  pyproject.toml  requirements.txt  test_input_box.py  test_uno_com_player.py  test_uno_game_green.py  test_uno_game_red.py  uno_game.py
animations/: animation.py  move_animation.py  skip_animation.py
assets/cards/: card_vals.md
assets/css/: black.css  blue.css  green.css  red.css  yellow.css
classes/: button.py  rect.py  text_box.py
game/: ai_player.py  card.py  player.py  uno_card.py  uno_com_player.py  uno_constants.py  uno_game.py  uno_player.py
game/story_mode/: uno_game_blue.py  uno_game_green.py  uno_game_red.py  uno_game_yellow.py
renders/: button.py  card.py  computer.py  input_box.py  rect.py  text_box.py
screens/: end_menu.py  game.py  game_screen.py  key_setting_menu.py  menu_screen.py  options_menu.py  screen.py  settings_menu.py  start_menu.py
screens/menus/: achievements_menu.py  end_menu_.py  end_menu_screen.py  game_mode_menu.py  game_mode_menu_screen.py  host_menu_screen.py  join_menu.py  join_menu_screen.py  key_setting.py  key_setting_menu.py  lobby_menu_screen.py  (+18 more)
test/: __init__.py  test_button.py
tests/: test_animation.py  test_button.py  test_card.py  test_color_conversion.py  test_rect.py  test_screen.py  test_timer.py  test_uno_card.py  test_uno_game.py  test_uno_player.py
utils/: color_conversion.py  constants.py  draw_functions.py  fonts.py  helpers.py  json.py  loader.py  options.py  test.py  timer.py
(+1 files in other folders)
