[tool.poetry]
name = "pygameuno"
version = "0.1.0"
description = "UNO with pygame"
authors = ["jrsky723 <jrsky723@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pygame = "^2.1.3"

[tool.poetry.group.dev.dependencies]
black = "^23.1.0"
bs4 = "^0.0.1"
lxml = "^4.9.2"
cssutils = "^2.6.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
