[tool.poetry]
name = "pygameuno"
version = "0.1.0"
description = "UNO with pygame"
authors = ["jrsky723 <jrsky723@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pygame = "^2.3.0"
colorblind = "^0.0.9"
numpy = "^1.24.2"
opencv-python = "^4.7.0.72"

[tool.poetry.group.dev.dependencies]
black = "^23.1.0"
pytest = "^7.2.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
